# deep-dashboard

./: .gitlab-ci.yml  Makefile  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deep_dashboard/: __init__.py  auth.py  config.py  deep_oc.py  handlers.py  opts.py  orchestrator.py  run.py  tosca.py  utils.py
deep_dashboard/handlers/: __init__.py  base.py  deployments.py  modules.py
deep_dashboard/templates/: base.html  deployments.html  flashed_messages.html  footer.html  home.html  login.html  navbar.html  overview.html  portfolio.html  sidebar.html
deep_dashboard/templates/deployments/: index.html
deep_dashboard/templates/modules/: index.html
docker/: Dockerfile  docker-compose.yml  local.env
docker/docker-entrypoint.d/: 25-configure-dashboard-site.sh  30-tune-worker-processes.sh
docker/nginx/: dashboard.conf
etc/: deep_dashboard-config-generator.conf  deep_dashboard.conf.sample
