[metadata]
name = deep-dashboard
summary = This project is the dashboard to interact with the DEEP services.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es

home-page = https://gitlab.ifca.es/deep/deep-dashboard
project_urls =
    Bug Tracker = https://gitlab.ifca.es/deep/deep-dashboard/issues

python-requires = >=3.6

license = Apache-2
license_file = LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    deep_dashboard
